dati-semantic-ontology-designer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dati-semantic-ontology-designer
  name: dati-semantic-ontology-designer
  namespace: ndc-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dati-semantic-ontology-designer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dati-semantic-ontology-designer
      name: dati-semantic-ontology-designer
    spec:
      containers:
        image: ghcr.io/teamdigitale/dati-semantic-ontology-designer:main
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 8
          successThreshold: 1
          timeoutSeconds: 2
        name: dati-semantic-ontology-designer
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 8
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
