dati-semantic-ontology-designer/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-ontology-designer
  namespace: ndc-dev
  labels:
    application: dati-semantic-ontology-designer
spec:
  host: ndc-dev.apps.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: dati-semantic-ontology-designer
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
